--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="colores.css">
     <title>PORTAFOLIO</title>
 </head>
 <body>
-    
+    <header class="cuencabezado-buscador">
+
+    </header>
+
+    <div class="contenido">
+
+    </div>
+
+    <footer>
+        <h4>E.E.S.T N° 3 - escuela educatiba roberto arlt </h4>
+    </footer>
+
 </body>
 </html>
