--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="colores.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/colores.css" />
+
     <title>PORTAFOLIO</title>
-</head>
-<body>
-    <header class="cuencabezado-buscador">
+  </head>
+  <body>
+    <header></header>
 
-    </header>
-
-    <div class="contenido">
-
-    </div>
+    <div class="contenido"></div>
 
     <footer>
-        <h4>E.E.S.T N° 3 - escuela educatiba roberto arlt </h4>
+      <h4>E.E.S.T N° 3 - escuela educatiba roberto arlt</h4>
     </footer>
 
-</body>
+    <script src="js/action.js"></script>
+  </body>
 </html>
