--- a/index.html
+++ b/index.html
@@ -5,16 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/colores.css" />
-
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/brands.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>PORTAFOLIO</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="mark roboto">Trabajo Practico</div>
+      <div class="social">
+        <a
+          href="http://https://www.google.com/search?q=messi+campeon&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjLjt6ulIL-AhVipZUCHZ1UA2YQ_AUoAXoECAEQAw&biw=1366&bih=635"
+          class="fa-brands fa-instagram"
+        >
+        </a>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-discord"></i>
+      </div>
+    </header>
 
     <div class="contenido"></div>
 
     <footer>
-      <h4>E.E.S.T N° 3 - escuela educatiba roberto arlt</h4>
+      <h2 class="roboto">danielgimenez</h2>
+      <h4>
+        E.E.S.T N° 3 - escuela educatiba roberto arlt<span
+          class="material-icons"
+        >
+          stars
+        </span>
+      </h4>
     </footer>
 
     <script src="js/action.js"></script>
