--- a/index.html
+++ b/index.html
@@ -28,12 +28,29 @@
           class="fa-brands fa-instagram"
         >
         </a>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-discord"></i>
+        <a class="fa-brands fa-twitter"></a>
+        <a class="fa-brands fa-discord"></a>
       </div>
     </header>
 
-    <div class="contenido"></div>
+    <div class="contenido">
+      <div class="portafolio">
+        <h1>PDISC G1</h1>
+        <h3>portafolio de Gimenez Daniel</h3>
+      </div>
+
+      <div class="card">
+        <div class="img"></div>
+        <div class="titulo kanit">Trabajo Practico N1</div>
+        <div class="desc">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+          facere dolor, quam nesciunt nostrum consequuntur blanditiis ea vel
+          distinctio? Voluptatem ipsum laudantium excepturi recusandae
+          reprehenderit, quia exercitationem natus dolorem quisquam?
+        </div>
+        <a href="#" class="boton roboto">visualizar</a>
+      </div>
+    </div>
 
     <footer>
       <h2 class="roboto">danielgimenez</h2>
