--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <h3>portafolio de Gimenez Daniel</h3>
       </div>
 
+      <div class="contenedor-tarjeta">
       <div class="card">
         <div class="img"></div>
         <div class="titulo kanit">Trabajo Practico N1</div>
@@ -50,13 +51,39 @@
         </div>
         <a href="#" class="boton roboto">visualizar</a>
       </div>
+
+      <div class="card">
+        <div class="img"></div>
+        <div class="titulo kanit">Trabajo Practico N2</div>
+        <div class="desc">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+          facere dolor, quam nesciunt nostrum consequuntur blanditiis ea vel
+          distinctio? Voluptatem ipsum laudantium excepturi recusandae
+          reprehenderit, quia exercitationem natus dolorem quisquam?
+        </div>
+        <a href="#" class="boton roboto">visualizar</a>
+      </div>
+
+
+      <div class="card">
+        <div class="img"></div>
+        <div class="titulo kanit">Trabajo Practico N3</div>
+        <div class="desc">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+          facere dolor, quam nesciunt nostrum consequuntur blanditiis ea vel
+          distinctio? Voluptatem ipsum laudantium excepturi recusandae
+          reprehenderit, quia exercitationem natus dolorem quisquam?
+        </div>
+        <a href="#" class="boton roboto">visualizar</a>
+      </div>
+    </div>
     </div>
 
     <footer>
       <h2 class="roboto">danielgimenez</h2>
       <h4>
         E.E.S.T N° 3 - escuela educatiba roberto arlt<span
-          class="material-icons"
+          class="material-icons"  
         >
           stars
         </span>
