--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+  <head class="eliminar_celu">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,6 +17,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="css/mediaqueries.css">
+
+
+
     <title>PORTAFOLIO</title>
   </head>
   <body>
@@ -80,7 +84,6 @@
     </div>
 
     <footer>
-      <h2 class="roboto">danielgimenez</h2>
       <h4>
         E.E.S.T N° 3 - escuela educatiba roberto arlt<span
           class="material-icons"  
