--- a/trabajos_practicos/index.html
+++ b/trabajos_practicos/index.html
@@ -20,7 +20,7 @@
             <div class="busqueda">
                 <div class="icono material-icons-outlined" > place</div>
                 <input type="search" placeholder="Buscar restaurante">
-                <input type="submit" class="material-icons-outlined" value="person">
+                <input type="submit" class="material-icons-outlined" value="search">
             
             </div>
 
