--- a/trabajos_practicos/index.html
+++ b/trabajos_practicos/index.html
@@ -15,9 +15,12 @@
 <body>
     <section class="portada bnrep">
         <div class="mensaje roboto">
-            <h2>Buenas noches, Juan Segundo</h2>
-            <h5>Es hora de cenar!</h5>
-            <div class="busqueda">
+            <div class="texto">
+                <h2>Buenas noches, Juan Segundo</h2>
+                <h5>Es hora de cenar!</h5>    
+            </div>
+            
+          <div class="busqueda">
                 <div class="icono material-icons-outlined" > place</div>
                 <input type="search" placeholder="Buscar restaurante">
                 <input type="submit" class="material-icons-outlined" value="search">
@@ -28,7 +31,36 @@
     </section>
 
 
-    <section class="menu"></section>
+    <section class="menu">
+
+        <ul>
+            <li>
+                <a href="#menu">
+                    <i class="material-icons-outlined">local_cafe</i>
+                    <p>Caffe</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-icons-outlined">ramen_dining</i>
+                    <p>Sopa</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-icons-outlined">local_pizza</i>
+                    <p>Pizza</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-icons-outlined">bakery_dining</i>
+                    <p>medialunas</p>
+                </a>
+            </li>
+        </ul>
+
+    </section>
     <section class="productos"></section>
 
 </body>
