--- a/trabajos_practicos/index.html
+++ b/trabajos_practicos/index.html
@@ -17,7 +17,7 @@
         <div class="mensaje roboto">
             <div class="texto">
                 <h2>Buenas noches, Juan Segundo</h2>
-                <h5>Es hora de cenar!</h5>    
+                <h5>¡ Es Hora de Comer !</h5>    
             </div>
             
           <div class="busqueda">
@@ -43,7 +43,7 @@
             <li>
                 <a href="#">
                     <i class="material-icons-outlined">ramen_dining</i>
-                    <p>Sopa</p>
+                    <p>Remen</p>
                 </a>
             </li>
             <li>
@@ -54,8 +54,26 @@
             </li>
             <li>
                 <a href="#">
+                    <i class="material-icons-outlined">lunch_dining</i>
+                    <p>Hamburguesa</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
                     <i class="material-icons-outlined">bakery_dining</i>
                     <p>medialunas</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-icons-outlined">takeout_dining</i>
+                    <p>Cajita Feliz</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-icons-outlined">delivery_dining</i>
+                    <p>Delivery</p>
                 </a>
             </li>
         </ul>
