--- a/trabajos_practicos/index.html
+++ b/trabajos_practicos/index.html
@@ -1,85 +1,96 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/tp2.css">
-    <link rel="stylesheet" href="css/mq.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/brands.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/tp2.css" />
+    <link rel="stylesheet" href="css/mq.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/brands.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
     <title>Restaurante</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="portada bnrep">
-        <div class="mensaje roboto">
-            <div class="texto">
-                <h2>Buenas noches, Juan Segundo</h2>
-                <h5>¡ Es Hora de Comer !</h5>    
-            </div>
-            
-          <div class="busqueda">
-                <div class="icono material-icons-outlined" > place</div>
-                <input type="search" placeholder="Buscar restaurante">
-                <input type="submit" class="material-icons-outlined" value="search">
-            
-            </div>
-
+      <div class="mensaje roboto">
+        <div class="texto">
+          <h2>Buenas noches, Juan Segundo</h2>
+          <h5>¡ Es Hora de Comer !</h5>
         </div>
-    </section>
 
+        <div class="busqueda">
+          <div class="icono material-icons-outlined">place</div>
+          <input type="search" placeholder="Buscar restaurante" />
+          <input type="submit" class="material-icons-outlined" value="search" />
+        </div>
+      </div>
+    </section>
 
     <section class="menu">
-
-        <ul>
-            <li>
-                <a href="#menu">
-                    <i class="material-icons-outlined">local_cafe</i>
-                    <p>Caffe</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="material-icons-outlined">ramen_dining</i>
-                    <p>Remen</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="material-icons-outlined">local_pizza</i>
-                    <p>Pizza</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="material-icons-outlined">lunch_dining</i>
-                    <p>Hamburguesa</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="material-icons-outlined">bakery_dining</i>
-                    <p>medialunas</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="material-icons-outlined">takeout_dining</i>
-                    <p>Cajita Feliz</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="material-icons-outlined">delivery_dining</i>
-                    <p>Delivery</p>
-                </a>
-            </li>
-        </ul>
-
+      <ul>
+        <li>
+          <a href="#menu">
+            <i class="material-icons-outlined">local_cafe</i>
+            <p>Caffe</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons-outlined">ramen_dining</i>
+            <p>Remen</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons-outlined">local_pizza</i>
+            <p>Pizza</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons-outlined">lunch_dining</i>
+            <p>Hamburguesa</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons-outlined">bakery_dining</i>
+            <p>medialunas</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons-outlined">takeout_dining</i>
+            <p>Cajita Feliz</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons-outlined">delivery_dining</i>
+            <p>Delivery</p>
+          </a>
+        </li>
+      </ul>
     </section>
-    <section class="productos"></section>
-
-</body>
+    <section class="productos">
+      <h2>RESTAURANTES</h2>
+      <div class="restos">
+        <article class="card">
+          <div class="img"></div>
+          <div class="datosresto"></div>
+        </article>
+      </div>
+    </section>
+  </body>
 </html>
