--- a/trabajos_practicos/index.html
+++ b/trabajos_practicos/index.html
@@ -87,8 +87,25 @@
       <h2>RESTAURANTES</h2>
       <div class="restos">
         <article class="card">
-          <div class="img"></div>
-          <div class="datosresto"></div>
+          <div class="img">
+            <img src="img/res.jpg" alt="descripcion de imagenes">
+          </div>
+          <div class="datosresto">
+            <h3>Cuba resto2</h3>
+            <h4>Comida cubana y caribeñas</h4>
+            <div class="valores">
+              <div class="estrellas">
+                <div class="estrellas"></div>
+                <i class="material-icons-outlined">star star star star_half star_outlined</strong></i>                
+              </div>
+              <div class="rangoprecio">
+                <i class="material-icons-outlined">
+                  attach_money attach_money attach_money
+                </i>
+              </div>
+              <div class="rangoprecio">$$$</div>
+            </div>
+          </div>
         </article>
       </div>
     </section>
