--- a/trabajos_practicos/index.html
+++ b/trabajos_practicos/index.html
@@ -22,7 +22,7 @@
     <title>Restaurante</title>
   </head>
   <body>
-    <section class="portada bnrep">
+    <section class="sportada bnrep">
       <div class="mensaje roboto">
         <div class="texto">
           <h2>Buenas noches, Juan Segundo</h2>
